// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers Build indy proof request from template containing attributes group 1`] = `
Object {
  "indy": Object {
    "name": "Practising lawyer",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => Object {
        "names": Array [
          "Given Name",
          "Surname",
          "PPID",
          "Member Status",
        ],
        "restrictions": Array [
          Object {
            "schema_id": "XUxBrVSALWHLeycAUhrNr9:2:Member Card:1.5.1",
          },
        ],
      },
    },
    "requestedPredicates": Map {},
    "version": "0.0.1",
  },
}
`;

exports[`Helpers Build indy proof request from template containing two requested attributes 1`] = `
Object {
  "indy": Object {
    "name": "Full name",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => Object {
        "name": "given_names",
        "restrictions": Array [
          Object {
            "schema_id": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
          },
        ],
      },
      "referent_1" => Object {
        "name": "family_name",
        "restrictions": Array [
          Object {
            "schema_id": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
          },
        ],
      },
    },
    "requestedPredicates": Map {},
    "version": "0.0.1",
  },
}
`;

exports[`Helpers Build indy proof request from template containing two requested attributes and predicate 1`] = `
Object {
  "indy": Object {
    "name": "19+ and Full name",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => Object {
        "names": Array [
          "given_names",
          "family_name",
        ],
        "restrictions": Array [
          Object {
            "schema_id": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
          },
        ],
      },
    },
    "requestedPredicates": Map {
      "referent_1" => Object {
        "name": "birthdate_dateint",
        "predicateType": ">=",
        "predicateValue": 18,
        "restrictions": Array [
          Object {
            "schema_id": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
          },
        ],
      },
    },
    "version": "0.0.1",
  },
}
`;

exports[`Helpers Build indy proof request from template id 1`] = `
Object {
  "indy": Object {
    "name": "Full name",
    "nonce": "1677766511505",
    "requestedAttributes": Map {
      "referent_0" => Object {
        "name": "given_names",
        "restrictions": Array [
          Object {
            "schema_id": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
          },
        ],
      },
      "referent_1" => Object {
        "name": "family_name",
        "restrictions": Array [
          Object {
            "schema_id": "XUxBrVSALWHLeycAUhrNr9:2:Person:1.0",
          },
        ],
      },
    },
    "requestedPredicates": Map {},
    "version": "0.0.1",
  },
}
`;
